CMF 1.4.1 (unreleased)

  Bug Fixes
  
    - Skinnable: Fix acquisition wrapping so that getPhysicalPath is not
      spoofed during funny traversals.

    - ScriptableTypeInformation: Fixed ownership of constructor scripts.
      (Collector #165)

    - zpt skins (CMFDefault): Fixed some minor template issues.
      (Collector #156 and other)

    - zpt skins (CMFDefault and CMFCalendar): Fixed stylesheets.
      (Collector #164)

    - MembershipTool (CMFCore and CMFDefault): Made sure 'createMemberarea()'
      always grants the right Ownership and Owner role for new member folders.
      This doesn't fix existing member folders with wrong Owner roles.
      If you use a customized MembershipTool, make sure your createMemberarea
      method does the Right Thing.
      (Collector #162)

CMF 1.4 (2003/05/19)

  Bug Fixes

    - The memberdata tool now fetches properties from member objects using
      'getProperty' when returning search results, rather than performing
      direct attribute access on the member.

    - The CookieCrumber now functions for HEAD requests.

    - type actions: They are now absolute URLs by default.
      For 'getActionById' and '_getViewFor' they are converted to relative
      URLs. (Collector #152)

CMF 1.4beta1 (2003/04/28)

  New Features

    - Made TypeInformation objects derive from CMFCore.ActionProviderBase:
      their actions are now TALES expressions, and they have conditions
      (like all the "tool actions").
      
    - zpt skins (CMFDefault): Added i18n attributes.
      See INSTALL.txt for installing internationalization support.
      (Collector #122, thanks to Gitte Wange for her contribution)

    - zpt skins (CMFDefault): Added 'zpt_content/transition_form.pt'.
      'content_*_form.pt' now use this template.

    - skins (CMFDefault): Made scripts independent of submit button 'values'.

    - Added .css to the extensions that create FSFile objects in
      DirectoryViews (see CMFCore/FSFile.py)